# voice_assistant

./: .gitignore  CMakeLists.txt  README.md  config.json  install_models.sh  install_ollama.sh  setup.sh
include/: audio_input.h  config.h  ollama_client.h  streaming_audio_input.h  streaming_whisper_stt.h  tts_engine.h  vad.h  whisper_stt.h
src/: config.cpp  main.cpp  main.cpp.bak  main.py  streaming_audio_input.cpp  streaming_whisper_stt.cpp
src/modules/: __init__.py  audio_input.py  ollama_process.py  tts.py  whisper_stt.py
tests/: CMakeLists.txt  test_config.cpp  test_ollama.cpp  test_tts.cpp  test_whisper.cpp
